--- a/css/styles.css
+++ b/css/styles.css
@@ -12,11 +12,13 @@ html {
 }
 body {
     font-size: 16px;
+    font-family: 'Krub', sans-serif;
 }
 /* Las dos hack anteriores me estan haciendo la conversion de 1rem = 10px */
 .titulo {
     text-align: center;
     font-size: 3.8rem;
+    
 }
 
 .titulo span {
