Editando css en comentario

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,4 @@
-:root { /* es un speudo elemento llamado Custome Properties*/
+:root { /* es un pseudo elemento llamado Custome Properties*/
     --blanco: #ffffff;
     --oscuro: #212121;
     --primario: #ffc107;
